@@ -1,3 +1,12 @@
+2022-03-23 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
+
+	* support/regression/tests/bitint.c,
+	  support/regression/tests/bitintarith.c,
+	  support/regression/tests/bitintbitfield.c,
+	  support/regression/tests/bitintvararg.c,
+	  support/regression/tests/widebitintbitfield.c:
+	  Enable some tests for bit-precise integers on clang 11 host.
+
 2022-03-22 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
 
 	* src/SDCCcse.c,
